# mc-android-version-switcher

./: .gitignore  .gitmodules  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/io/mrarm/mcversion/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/io/mrarm/mcversion/: FileDownloader.java  GoogleLoginActivity.java  IOUtil.java  MainActivity.java  PlayApi.java  PlayHelper.java  UiThreadHelper.java  UiVersion.java  VersionDownloader.java  VersionInstaller.java  VersionList.java  VersionListAdapter.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  version_entry.xml
app/src/main/res/raw/: device_arm64.conf
app/src/main/res/values/: strings.xml
app/src/test/java/io/mrarm/mcversion/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
